--- a/views/locations_views.xml
+++ b/views/locations_views.xml
@@ -52,7 +52,7 @@
         </record>
 
         <record id="farm_locations_action" model="ir.actions.act_window">
-            <field name="name">Project Locations</field>
+            <field name="name">Locations</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">farm.locations</field>
             <field name="view_mode">tree,form</field>
