--- a/views/control_views.xml
+++ b/views/control_views.xml
@@ -36,7 +36,7 @@
             <field name="model">farm.pioasset</field>
             <field name="priority">1</field>
             <field name="arch" type="xml">
-                <tree string="Pio Asset">
+                <tree string="Pio Asset" sample="1">
                     <field name="code"/>
                     <field name="name"/>
                     <field name="type"/>
@@ -109,7 +109,7 @@
             <field name="model">farm.event</field>
             <field name="priority">1</field>
             <field name="arch" type="xml">
-                <tree string="Pio Asset">
+                <tree string="Pio Asset" sample="1">
                     <field name="name"/>
                     <field name="description"/>
                     <field name="company_id" widget="selection" groups="base.group_multi_company"/>
@@ -175,7 +175,7 @@
             <field name="model">farm.action</field>
             <field name="priority">1</field>
             <field name="arch" type="xml">
-                <tree string="Pio Asset">
+                <tree string="Pio Asset" sample="1">
                     <field name="name"/>
                     <field name="description"/>
                     <field name="company_id" widget="selection" groups="base.group_multi_company"/>
