--- a/views/expenses_views.xml
+++ b/views/expenses_views.xml
@@ -4,7 +4,7 @@
         <field name="name">farm.expenses.form</field>
         <field name="model">farm.expenses</field>
         <field name="arch" type="xml">
-            <form string="expenses">
+            <form string="Expenses">
                 <header>
                     <field name="state" widget="statusbar"
                            options="{'clickable': '0'}" clickable="True" type="object"/>
@@ -133,7 +133,7 @@
         <field name="name">farm.expenses.tree</field>
         <field name="model">farm.expenses</field>
         <field name="arch" type="xml">
-            <tree string="expenses" sample="1">
+            <tree string="Expenses" sample="1">
                 <field name="name"/>
                 <field name="state"/>
                 <field name="projects_id"/>
@@ -153,7 +153,7 @@
         <field name="name">farm.expenses.calendar</field>
         <field name="model">farm.expenses</field>
         <field name="arch" type="xml">
-            <calendar string="expenses"
+            <calendar string="Expenses"
                       date_start="issue_date"
                       create="1"
                       quick_add="False"
@@ -177,7 +177,7 @@
         <field name="name">farm.expenses.pivot</field>
         <field name="model">farm.expenses</field>
         <field name="arch" type="xml">
-            <pivot string="expenses">
+            <pivot string="Expenses">
                 <field name="projects_id" type="row"/>
                 <field name="short_name" type="row"/>
                 <field name="name" type="row"/>
@@ -197,7 +197,7 @@
         <field name="name">farm.expenses.graph</field>
         <field name="model">farm.expenses</field>
         <field name="arch" type="xml">
-            <graph string="expense Analysis" type="line" sample="1">
+            <graph string="Expense Analysis" type="line" sample="1">
                 <field name="issue_date" interval="day"/>
                 <field name="e_order_cost" type="measure"/>
             </graph>
