--- a/views/equipments_views.xml
+++ b/views/equipments_views.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="farm_equipments_view_form" model="ir.ui.view">
+        <record id="farm_equipments_view_form"
+            model="ir.ui.view">
             <field name="name">farm.equipments.form</field>
             <field name="model">farm.equipments</field>
-            <field name="arch" type="xml">
+            <field name="arch"
+                type="xml">
                 <form string="Equipments">
                     <sheet>
-                        <div class="oe_button_box" name="button_equipments_box">
-                            <button name="action_action" type="object"
-                                    class="oe_stat_button"
-                                    icon="fa-file-text-o">
+                        <div class="oe_button_box"
+                            name="button_equipments_box">
+                            <button name="action_action"
+                                type="object"
+                                class="oe_stat_button"
+                                icon="fa-file-text-o">
                                 <div class="o_stat_info">
                                     <field name="order_line_count"/>
                                     <span class="o_stat_text">Count</span>
                                 </div>
                             </button>
-                            <button name="action_action" type="object"
-                                    class="oe_stat_button"
-                                    icon="fa-money">
+                            <button name="action_action"
+                                type="object"
+                                class="oe_stat_button"
+                                icon="fa-money">
                                 <div class="o_stat_info">
-                                    <field name="currency_id" invisible="1"
-                                           groups="base.group_multi_currency"/>
-                                    <field name="order_line_cost" widget='monetary'
-                                           options="{'currency_field': 'currency_id'}"/>
+                                    <field name="currency_id"
+                                        invisible="1"
+                                        groups="base.group_multi_currency"/>
+                                    <field name="order_line_cost"
+                                        widget='monetary'
+                                        options="{'currency_field': 'currency_id'}"/>
                                     <span class="o_stat_text">Order Amount</span>
                                 </div>
                             </button>
-                            <button name="action_action" type="object"
-                                    class="oe_stat_button"
-                                    icon="fa-money">
+                            <button name="action_action"
+                                type="object"
+                                class="oe_stat_button"
+                                icon="fa-money">
                                 <div class="o_stat_info">
-                                    <field name="currency_id" invisible="1"
-                                           groups="base.group_multi_currency"/>
-                                    <field name="total_expense" widget='monetary'
-                                           options="{'currency_field': 'currency_id'}"/>
+                                    <field name="currency_id"
+                                        invisible="1"
+                                        groups="base.group_multi_currency"/>
+                                    <field name="total_expense"
+                                        widget='monetary'
+                                        options="{'currency_field': 'currency_id'}"/>
                                     <span class="o_stat_text">Actual Amount</span>
                                 </div>
                             </button>
@@ -56,50 +66,77 @@
                             </group>
                             <group>
                                 <field name="buy_sell_price"/>
-                                <field name="category_id" readonly="1"/>
+                                <field name="category_id"
+                                    readonly="1"/>
                                 <div>
-                                    <field name="create_lock" invisible="1"/>
-                                    <button name="create_equipment_product" type="object"
-                                            string="Create Product"
-                                            class="oe_highlight"
-                                            attrs="{'invisible':[('create_lock','!=', True)]}"/>
+                                    <field name="create_lock"
+                                        invisible="1"/>
+                                    <button name="create_equipment_product"
+                                        type="object"
+                                        string="Create Product"
+                                        class="oe_highlight"
+                                        attrs="{'invisible':[('create_lock','!=', True)]}"/>
                                 </div>
-                                <field name="company_id" widget="selection" groups="base.group_multi_company"/>
+                                <field name="company_id"
+                                    widget="selection"
+                                    groups="base.group_multi_company"/>
                             </group>
                         </group>
                         <notebook>
-                            <page name="farm_operation_olines" string="Order Line">
+                            <page name="farm_operation_olines"
+                                string="Order Line">
                                 <field name="operation_order_line_ids">
                                     <tree>
-                                        <field name="sequence" widget="handle"/>
-                                        <field name="product_id" widget="selection"/>
-                                        <field name="name" widget="section_and_note_text"/>
-                                        <field name="categ_id" widget="selection" invisible="1"/>
-                                        <field name="price_unit" widget="monetary"/>
-                                        <field name="company_id" widget="selection" invisible="1"/>
-                                        <field name="currency_id" widget="selection" invisible="1"/>
+                                        <field name="sequence"
+                                            widget="handle"/>
+                                        <field name="product_id"
+                                            widget="selection"/>
+                                        <field name="name"
+                                            widget="section_and_note_text"/>
+                                        <field name="categ_id"
+                                            widget="selection"
+                                            invisible="1"/>
+                                        <field name="price_unit"
+                                            widget="monetary"/>
+                                        <field name="company_id"
+                                            widget="selection"
+                                            invisible="1"/>
+                                        <field name="currency_id"
+                                            widget="selection"
+                                            invisible="1"/>
                                         <field name="product_uom"/>
                                         <field name="qty"/>
                                         <field name="note"/>
-                                        <field name="price_subtotal" sum="Total Cost"/>
-                                        <field name="equipments_id" invisible="1"/>
+                                        <field name="price_subtotal"
+                                            sum="Total Cost"/>
+                                        <field name="equipments_id"
+                                            invisible="1"/>
                                         <field name="analytic_account_id"/>
                                     </tree>
                                 </field>
                             </page>
-                            <page name="actual_move_line" string="Actual Line">
+                            <page name="actual_move_line"
+                                string="Actual Line">
                                 <field name="operation_actual_line_ids">
                                     <tree>
                                         <field name="account_id"/>
                                         <field name="analytic_account_id"/>
-                                        <field name="quantity" sum="Total QTY"/>
-                                        <field name="debit" sum="Total Debit"/>
-                                        <field name="credit" sum="Total Credit"/>
+                                        <field name="quantity"
+                                            sum="Total QTY"/>
+                                        <field name="debit"
+                                            sum="Total Debit"/>
+                                        <field name="credit"
+                                            sum="Total Credit"/>
                                         <field name="credit"/>
                                         <field name="date"/>
-                                        <field name="company_id" widget="selection" invisible="1"/>
-                                        <field name="currency_id" widget="selection" invisible="1"/>
-                                        <field name="equipments_id" invisible="1"/>
+                                        <field name="company_id"
+                                            widget="selection"
+                                            invisible="1"/>
+                                        <field name="currency_id"
+                                            widget="selection"
+                                            invisible="1"/>
+                                        <field name="equipments_id"
+                                            invisible="1"/>
                                     </tree>
                                 </field>
                             </page>
@@ -114,46 +151,61 @@
             </field>
         </record>
 
-        <record id="farm_equipments_view_tree" model="ir.ui.view">
+        <record id="farm_equipments_view_tree"
+            model="ir.ui.view">
             <field name="name">farm.equipments.tree</field>
             <field name="model">farm.equipments</field>
-            <field name="arch" type="xml">
-                <tree string="ModelTitle" sample="1">
+            <field name="arch"
+                type="xml">
+                <tree string="ModelTitle"
+                    sample="1">
                     <field name="code"/>
                     <field name="name"/>
                     <field name="description"/>
                     <field name="acq_date"/>
                     <field name="body_code"/>
                     <field name="type"/>
-                    <field name="company_id" widget="selection" groups="base.group_multi_company"/>
+                    <field name="company_id"
+                        widget="selection"
+                        groups="base.group_multi_company"/>
                 </tree>
             </field>
         </record>
 
-        <record id="farm_equipments_view_search" model="ir.ui.view">
+        <record id="farm_equipments_view_search"
+            model="ir.ui.view">
             <field name="name">farm.equipments.search</field>
             <field name="model">farm.equipments</field>
-            <field name="arch" type="xml">
+            <field name="arch"
+                type="xml">
                 <search string="Equipments">
-                    <group expand="1" string="Group By">
-                        <filter string="Equipment Type" name="type" domain="[]"
-                                context="{'group_by':'type'}"/>
+                    <group expand="1"
+                        string="Group By">
+                        <filter string="Equipment Type"
+                            name="type"
+                            domain="[]"
+                            context="{'group_by':'type'}"/>
                     </group>
                     <searchpanel>
-                        <field name="type" select="multi" string="Equipment Type" enable_counters="1"/>
+                        <field name="type"
+                            select="multi"
+                            string="Equipment Type"
+                            enable_counters="1"/>
                     </searchpanel>
                 </search>
             </field>
         </record>
 
-        <record id="farm_equipments_action" model="ir.actions.act_window">
+        <record id="farm_equipments_action"
+            model="ir.actions.act_window">
             <field name="name">Equipments</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">farm.equipments</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{}</field>
             <field name="domain">[]</field>
-            <field name="help" type="html">
+            <field name="help"
+                type="html">
                 <p class="o_view_nocontent_smiling_face">
                     Create your first equipment!
                 </p>
@@ -161,10 +213,10 @@
         </record>
 
         <menuitem id="menu_equipments"
-                  name="Equipments"
-                  parent="farm_menu_other"
-                  action="farm_equipments_action"
-                  sequence="14"/>
+            name="Equipments"
+            parent="farm_menu_other"
+            action="farm_equipments_action"
+            sequence="14"/>
 
     </data>
 </odoo>
