--- a/views/locations_views.xml
+++ b/views/locations_views.xml
@@ -1,73 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-        <record id="farm_locations_view_form" model="ir.ui.view">
-            <field name="name">farm.locations.form</field>
-            <field name="model">farm.locations</field>
-            <field name="arch" type="xml">
-                <form class="oe_form_configuration">
-                    <sheet>
-                        <div class="oe_title">
-                            <label for="name" string="Location"/>
-                            <h1>
-                                <field name="name" placeholder="Sector 1, 2,.."/>
-                                <field name="address" placeholder=" North West East South of ..."/>
-                            </h1>
-                        </div>
-                        <group name="first" col="2">
-                            <field name="parent_id" class="oe_inline"/>
-                            <field name="space" class="oe_inline"/>
-                            <field name="child_id" class="oe_inline" invisible="1"/>
-                            <field name="space_sum" attrs="{'readonly' : [('child_id', '!=', False)]}"/>
-                            <field name="company_id" widget="selection" groups="base.group_multi_company"/>
-                        </group>
-                    </sheet>
-                </form>
-            </field>
-        </record>
+    <record id="farm_locations_view_form"
+        model="ir.ui.view">
+        <field name="name">farm.locations.form</field>
+        <field name="model">farm.locations</field>
+        <field name="arch"
+            type="xml">
+            <form class="oe_form_configuration">
+                <sheet>
+                    <div class="oe_title">
+                        <label for="name"
+                            string="Location"/>
+                        <h1>
+                            <field name="name"
+                                placeholder="Sector 1, 2,.."/>
+                            <field name="address"
+                                placeholder=" North West East South of ..."/>
+                        </h1>
+                    </div>
+                    <group name="first"
+                        col="2">
+                        <field name="parent_id"
+                            class="oe_inline"/>
+                        <field name="space"
+                            class="oe_inline"/>
+                        <field name="child_id"
+                            class="oe_inline"
+                            invisible="1"/>
+                        <field name="space_sum"
+                            attrs="{'readonly' : [('child_id', '!=', False)]}"/>
+                        <field name="company_id"
+                            widget="selection"
+                            groups="base.group_multi_company"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
 
-        <record id="farm_locations_view_tree" model="ir.ui.view">
-            <field name="name">farm.locations.tree</field>
-            <field name="model">farm.locations</field>
-            <field name="priority">1</field>
-            <field name="arch" type="xml">
-                <tree string="Project Locations" sample="1">
-                    <field name="name"/>
-                    <field name="address" placeholder=" North West East South of ..."/>
-                    <field name="display_name"/>
-                    <field name="space_sum"/>
-                    <field name="company_id" widget="selection" groups="base.group_multi_company"/>
-                </tree>
-            </field>
-        </record>
+    <record id="farm_locations_view_tree"
+        model="ir.ui.view">
+        <field name="name">farm.locations.tree</field>
+        <field name="model">farm.locations</field>
+        <field name="priority">1</field>
+        <field name="arch"
+            type="xml">
+            <tree string="Project Locations"
+                sample="1">
+                <field name="name"/>
+                <field name="address"
+                    placeholder=" North West East South of ..."/>
+                <field name="display_name"/>
+                <field name="space_sum"/>
+                <field name="company_id"
+                    widget="selection"
+                    groups="base.group_multi_company"/>
+            </tree>
+        </field>
+    </record>
 
-        <record id="farm_locations_view_search" model="ir.ui.view">
-            <field name="name">farm.locations.search</field>
-            <field name="model">farm.locations</field>
-            <field name="arch" type="xml">
-                <search string="Locations">
-                    <field name="name" string="Project Locations"/>
-                    <field name="parent_id"/>
-                </search>
-            </field>
-        </record>
+    <record id="farm_locations_view_search"
+        model="ir.ui.view">
+        <field name="name">farm.locations.search</field>
+        <field name="model">farm.locations</field>
+        <field name="arch"
+            type="xml">
+            <search string="Locations">
+                <field name="name"
+                    string="Project Locations"/>
+                <field name="parent_id"/>
+            </search>
+        </field>
+    </record>
 
-        <record id="farm_locations_action" model="ir.actions.act_window">
-            <field name="name">Locations</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">farm.locations</field>
-            <field name="view_mode">tree,form</field>
-            <field name="context">{}</field>
-            <field name="domain">[]</field>
-            <field name="help" type="html">
-                <p class="o_view_nocontent_smiling_face">
+    <record id="farm_locations_action"
+        model="ir.actions.act_window">
+        <field name="name">Locations</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">farm.locations</field>
+        <field name="view_mode">tree,form</field>
+        <field name="context">{}</field>
+        <field name="domain">[]</field>
+        <field name="help"
+            type="html">
+            <p class="o_view_nocontent_smiling_face">
                     Create your first project location!</p>
-            </field>
-        </record>
+        </field>
+    </record>
 
-        <menuitem id="menu_locations"
-                  name="Locations"
-                  parent="farm_menu_other"
-                  action="farm_locations_action"
-                  sequence="15"/>
+    <menuitem id="menu_locations"
+        name="Locations"
+        parent="farm_menu_other"
+        action="farm_locations_action"
+        sequence="15"/>
 
 </odoo>
